# harshith_ai

./: .gitignore  README.md  pyproject.toml
harshith_ai/: api.py  hooks.py  modules.txt
harshith_ai/www/: ai.html  ai.py
