[project]
name = "harshith_ai"
authors = [
    { name = "Harshith Vaddiparthy", email = "vharshith.2810@gmail.com" },
]
description = "AI Command Center for Harshith's Learning Platform"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
